<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom">

    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="titre"
        android:textColor="@color/noire"
        android:fontFamily="@font/maven_pro_bold"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/mdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/maven_pro"
        android:textColor="@color/noire"
        android:layout_below="@+id/titre"
        android:textSize="15dp"
        android:text="@string/modif_mdp"
        app:backgroundTint="@color/white" />

    <Button
        android:id="@+id/modif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modif_compte"
        android:textSize="15dp"
        android:fontFamily="@font/maven_pro"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/mdp"
        android:textColor="@color/noire"
        app:backgroundTint="@color/white"
        />

    <Button
        android:id="@+id/param"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modif"
        android:text="@string/param"
        android:textSize="15dp"
        android:fontFamily="@font/maven_pro"
        android:layout_centerHorizontal="true"
        android:textColor="@color/noire"
        app:backgroundTint="@color/white" />

    <Button
        android:id="@+id/deco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/param"
        android:fontFamily="@font/maven_pro"
        android:layout_centerHorizontal="true"
        android:textSize="12dp"
        android:text="@string/deconnexion"
        android:textColor="@color/rouge_extr"
        app:backgroundTint="@color/white" />
</RelativeLayout>