<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fond_gris"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="horizontal"
            android:weightSum="100">



            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="horizontal">
            </LinearLayout>

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:background="#00FFFFFF"
                android:onClick="retourLogIn"
                android:scaleType="fitStart"
                app:srcCompat="@android:drawable/ic_menu_revert" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/maven_pro_bold"
                android:gravity="bottom|center"
                android:text="@string/creercompte"
                android:textColor="@color/noire_titre"
                android:textSize="34sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/logo_v5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.5"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="horizontal">
            </LinearLayout>

            <EditText
                android:id="@+id/editTextPersonName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:background="@drawable/barre_de_texte"
                android:ems="10"
                android:fontFamily="@font/maven_pro_medium"
                android:hint="@string/nom"
                android:inputType="textPersonName"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColorHint="@color/noire" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="horizontal">
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.5"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="horizontal">
            </LinearLayout>

            <EditText
                android:id="@+id/editTextPersonSurname"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:background="@drawable/barre_de_texte"
                android:ems="10"
                android:fontFamily="@font/maven_pro_medium"
                android:hint="@string/prénom"
                android:inputType="textPersonName"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColorHint="@color/noire" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="horizontal">
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.5"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="horizontal">
            </LinearLayout>

            <EditText
                android:id="@+id/editTextMail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:background="@drawable/barre_de_texte"
                android:ems="10"
                android:fontFamily="@font/maven_pro_medium"
                android:hint="@string/mail"
                android:inputType="textPersonName"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColorHint="@color/noire" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="horizontal">
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.5"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="horizontal">
            </LinearLayout>

            <EditText
                android:id="@+id/editTextMDP"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:background="@drawable/barre_de_texte"
                android:ems="10"
                android:fontFamily="@font/maven_pro_medium"
                android:hint="@string/mdp"
                android:inputType="textPersonName"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:password="true"
                android:textColorHint="@color/noire" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="horizontal">
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.5"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="horizontal">
            </LinearLayout>

            <EditText
                android:id="@+id/editTextMDP2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:background="@drawable/barre_de_texte"
                android:ems="10"
                android:fontFamily="@font/maven_pro_medium"
                android:hint="@string/mdp2"
                android:inputType="textPersonName"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:password="true"
                android:textColor="@color/noire"
                android:textColorHint="@color/noire" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="horizontal">
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:orientation="horizontal">

            </LinearLayout>

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/bouton_creer_compte" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>